# pemsa-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  install_manifest.txt  pemsa_sdl.cbp  todo.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml
carts/: splore.p8
include/sdl/: no_cart.hpp  sdl_graphics_backend.hpp  sdl_input_backend.hpp
src/sdl/: main.cpp  sdl_graphics_backend.cpp  sdl_input_backend.cpp
